// Copied from the GAIA Azure DevOps repo:
// https://dev.azure.com/slb-swt/gaia/_git/opportunity?path=/opportunity-resource/src/main/proto/service.proto

syntax = "proto3";
package com.slb.xchange.resource;
import "google/protobuf/empty.proto";

option java_package = "com.slb.xchange.resource";
option java_multiple_files = true;

service OpportunityService {
  rpc CreateOpportunity(CreateOpportunityRequest) returns (CreateOpportunityResponse);
  rpc CreateOpportunityProfile(CreateOpportunityProfileRequest) returns (CreateOpportunityProfileResponse);
  rpc CreateConfidentialOpportunityProfile(CreateConfidentialOpportunityProfileRequest) returns (CreateConfidentialOpportunityProfileResponse);
  rpc UpdateOpportunity(UpdateOpportunityRequest) returns (UpdateOpportunityResponse);
  rpc GetOpportunities(GetOpportunitiesRequest) returns (GetOpportunitiesResponse);
  rpc DeleteOpportunity(DeleteOpportunityRequest) returns (google.protobuf.Empty);
  rpc GetPublicOpportunities(GetOpportunitiesRequest) returns (GetOpportunitiesResponse);
  rpc GetOpportunity(GetOpportunityRequest) returns (GetOpportunityResponse);
  rpc GetPublicOpportunity(GetPublicOpportunityRequest) returns (GetPublicOpportunityResponse);
  rpc CreateDeliverable(CreateDeliverableRequest) returns (CreateDeliverableResponse);
  rpc AssociateMapRepresentationWithOpportunity(AssociateMapRepresentationWithOpportunityRequest) returns (google.protobuf.Empty);
  rpc PublishOpportunity(PublishOpportunityRequest) returns (google.protobuf.Empty);
  rpc GetMapRepresentations(GetMapRepresentationsRequest) returns (GetMapRepresentationsResponse);
  rpc UnPublishOpportunity(UnPublishOpportunityRequest) returns (google.protobuf.Empty);

  rpc CreateMapRepresentationForOpportunity(CreateMapRepresentationForOpportunityRequest) returns (CreateMapRepresentationForOpportunityResponse);
  rpc DeleteMapRepresentation(DeleteMapRepresentationRequest) returns (google.protobuf.Empty);
  rpc CreateOrUpdateOpportunityVDR(CreateOpportunityVDRRequest) returns (CreateOpportunityVDRResponse);
}

message CreateOpportunityRequest {
  string opportunity_name = 1;
  string opportunity_type = 2;
}

message CreateOpportunityResponse {
  string opportunity_id = 1;
}

message CreateOpportunityProfileRequest {
  string opportunity_id = 1;
  OpportunityProfile opportunity_profile = 2;
}

message CreateConfidentialOpportunityProfileRequest {
  string opportunity_id = 1;
  ConfidentialOpportunityProfile confidential_opportunity_profile = 2;
}

message CreateConfidentialOpportunityProfileResponse {
  string opportunity_profile_id = 1;
}

message ConfidentialOpportunityProfile{
  string overview = 1;
  repeated Media media = 2;
  repeated Document documents = 3;
}

message OpportunityProfile {
  string overview = 1;
  repeated Media media = 2;
  repeated Document documents = 3;}

message Media {
  string file_id = 1;
  string file_name = 2;
  string fileType = 3;
  string caption = 4;
  bool   profileImage = 5;
}

message Document {
  string file_id = 1;
  string file_name = 2;
  string fileType = 3;
  string caption = 4;
}

message CreateOpportunityProfileResponse {
  string opportunity_profile_id = 1;
}

message UpdateOpportunityRequest {
  string opportunity_id = 1;
  string opportunity_name = 2;
  string opportunity_type = 3;
  repeated string countries = 4;
  repeated string phase = 5;

  repeated string asset_type = 6;
  repeated string delivery_type = 7;
  repeated string offer_type = 8;
  repeated string contract_type = 9;
  string offer_start_date = 10;
  string offer_end_date = 11;
}

message UpdateOpportunityResponse {
  string opportunity_id = 1;
}

message GetOpportunitiesRequest {

}

message GetOpportunitiesResponse {
  repeated Opportunity opportunities = 1;
}

message Opportunity {
  string opportunity_id = 1;
  string opportunity_name = 2;
  string opportunity_type = 3;
  string data_vendor_id = 4;
  string opportunity_status =5;
  OpportunityProfile opportunity_profile = 6;
  repeated string countries = 7;
  ConfidentialOpportunityProfile confidential_opportunity_profile = 8;
  repeated string phase = 9;

  repeated string asset_type = 10;
  repeated string delivery_type = 11;
  repeated string offer_type = 12;
  repeated string contract_type = 13;
  string offer_start_date = 14;
  string offer_end_date = 15;

}

message DeleteOpportunityRequest {
  string opportunityId = 1;
}

message AssociateMapRepresentationWithOpportunityRequest {
  string opportunity_id    = 1;
  string map_representation_id    = 2;
  string data_type         = 3;
  string file_id         = 4;
}

message PublishOpportunityRequest {
  string opportunity_id = 1;
}

message DetailedOpportunity {
  string             opportunity_id      = 1;
  string             opportunity_name    = 2;
  string             opportunity_status  = 3;
  OpportunityProfile opportunity_profile = 4;
  string             created_by          = 5;
  string             created_date        = 6;
  string             last_modified_by     = 7;
  string             last_modified_date   = 8;
  string             data_vendor_id       = 9;
  string             opportunity_type    = 10;
  repeated           string  countries   = 11;
  ConfidentialOpportunityProfile confidential_opportunity_profile = 12;
  repeated string phase = 13;

  repeated string asset_type = 14;
  repeated string delivery_type = 15;
  repeated string offer_type = 16;
  repeated string contract_type = 17;
  string offer_start_date = 18;
  string offer_end_date = 19;
  OpportunityVDR opportunity_VDR = 20;

}

message GetOpportunityRequest {
  string opportunity_id = 1;
}

message GetPublicOpportunityRequest {
  string opportunity_id = 1;
}

message GetOpportunityResponse {
  DetailedOpportunity opportunity = 1;
}

message GetPublicOpportunityResponse {
  PublicOpportunity opportunity = 1;
}

message CreateMapRepresentationForOpportunityRequest {
  string file_id           = 1;
  string data_type         = 2;
  string opportunity_id    = 3;
}

message CreateMapRepresentationForOpportunityResponse {
  string map_representation_id = 1;
}

message CreateDeliverableRequest {
  string opportunity_id    = 1;
  string file_id      = 2;
}

message CreateDeliverableResponse {
  string deliverable_id = 1;
}

message GetMapRepresentationsRequest {
  string opportunity_id = 1;
}

message GetMapRepresentationsResponse {
  repeated MapRepresentation map_representations = 1;
}

message MapRepresentation {
  string map_representation_id = 1;
  string file_id = 2;
  string data_type = 3;
  string file_name = 4;
}

message DeleteMapRepresentationRequest {
  string opportunity_id = 1;
  string map_representation_id = 2;
}

message PublicOpportunity {
  string opportunity_id = 1;
  string opportunity_name = 2;
  string opportunity_type = 3;
  string data_vendor_id = 4;
  string opportunity_status =5;
  OpportunityProfile opportunity_profile = 6;
  repeated string countries = 7;
  PublicConfidentialOpportunityProfile confidential_opportunity_profile = 8;
  repeated string phase = 9;
  repeated string asset_type = 10;
  repeated string delivery_type = 11;
  repeated string offer_type = 12;
  repeated string contract_type = 13;
  string offer_start_date = 14;
  string offer_end_date = 15;
  PublicOpportunityVDR opportunity_VDR = 16;
  CCUSAttributes ccus_attributes = 17;
}

message PublicConfidentialOpportunityProfile {
  string overview = 1;
  repeated Media media = 2;
  repeated Document documents = 3;
  bool hasAccess = 4;
}

message UnPublishOpportunityRequest {
  string opportunity_id = 1;
}

message CreateOpportunityVDRRequest {
  string opportunity_id = 1;
  OpportunityVDR opportunity_VDR = 2;
}

message OpportunityVDR {
  string account_name = 1;
  string department_name = 2;
  string vdr_link = 3;
}

message CreateOpportunityVDRResponse {
  string opportunity_VDR_id = 1;
}

message PublicOpportunityVDR {
  string opportunity_VDR_id = 1;
  string account_name = 2;
  string department_name = 3;
  string vdr_link = 4;
  bool hasAccess = 5;
}

message CCUSAttributes {
  double expected_sequestration = 1;
  double cost_of_carbon_abated = 2;
  string certifier = 3;
  string last_validated_or_verified = 4;
}